# VideoTranscoderForChromecast

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  Main.cpp  ProcessDialog.cpp  ProcessDialog.h  ProcessDialog.ui  Utils.cpp  Utils.h  VideoTranscoder.cpp  VideoTranscoder.h  VideoTranscoder.ui  Worker.cpp  Worker.h  buildnumber.cmake  readme.md  resources.rc.in
Workers/: H264Worker.cpp  H264Worker.h  H265Worker.cpp  H265Worker.h  VP8Worker.cpp  VP8Worker.h  VP9Worker.cpp  VP9Worker.h
installer/: script.iss.in
rsc/: resources.qrc
rsc/darktheme/: style.qss
